--- a/ansible/files/citool-container.sh.j2
+++ b/ansible/files/citool-container.sh.j2
@@ -34,7 +34,7 @@ echo
 export CITOOL_IMAGE
 export CITOOL_IMAGE_ID="$image_id"
 export CITOOL_IMAGE_CTIME="$ctime"
-SENTRY_TAG_MAP="citool_image=CITOOL_IMAGE,citool_image_id=CITOOL_IMAGE_ID,citool_image_ctime=CITOOL_IMAGE_CTIME,worker_hostname=WORKER_HOSTNAME,request_id=REQUEST_ID,artifacts_url=ARTIFACTS_URL_REQUEST"
+export SENTRY_TAG_MAP="citool_image=${CITOOL_IMAGE},citool_image_id=${CITOOL_IMAGE_ID},hostname=$(hostname),ip=$(curl ipv4.icanhazip.com),request_id=${REQUEST_ID},artifacts_url=${ARTIFACTS_URL}/${REQUEST_ID}"
 
 # --init is required to collect zombies processes
 # --rm is required to cleanup the container after it has been run
@@ -54,11 +54,5 @@ exec podman run --init \
                 -e SENTRY_ENVIRONMENT={[ deployment ]} \
                 -e SENTRY_RELEASE={[ release ]} \
                 -e SENTRY_TAG_MAP=${SENTRY_TAG_MAP} \
-                -e CITOOL_IMAGE=${CITOOL_IMAGE} \
-                -e CITOOL_IMAGE_CTIME=${CITOOL_IMAGE_CTIME} \
-                -e CITOOL_IMAGE_ID=${CITOOL_IMAGE_ID} \
-                -e WORKER_HOSTNAME=$(hostname) \
-                -e REQUEST_ID=${REQUEST_ID} \
-                -e ARTIFACTS_URL_REQUEST="${ARTIFACTS_URL}/${REQUEST_ID}" \
                 ${CITOOL_EXTRA_PODMAN_ARGS} \
-                "${CITOOL_IMAGE}" "$@"
+                "$CITOOL_IMAGE" "$@"
