worker-redhat: enable both tag repositories
We are trying an approach where we add both available
tag repositories to the systems (mainline and z-stream)
to mitigate issues with choosing the wrong one.

This simple approach should work well, as we really need
this repository only to be present to provide some additional
dependencies specified by the version requirements.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/templates/tag.repo.j2
@@ -1,5 +1,5 @@
-[testing-farm-tag-repository]
-name=Tag repository for {{ IMAGE_NAME }}
+[testing-farm-tag-repository-{{ tag_repository_type }}]
+name=Tag repository {{ tag_repository_type }} for {{ IMAGE_NAME }}
 baseurl={{ tag_repository_url }}
 gpgcheck=0
 enabled=1
@@ -13,8 +13,8 @@ module_hotfixes=1
 {% endif %}
 
 {% if ansible_architecture == 'x86_64' %}
-[testing-farm-tag-repository-i386]
-name=Tag repository for {{ IMAGE_NAME }} (i386)
+[testing-farm-tag-repository-{{ tag_repository_type }}-i386]
+name=Tag repository {{ tag_repository_type }} for {{ IMAGE_NAME }} (i386)
 baseurl={{ tag_repository_url | replace('x86_64', 'i386') }}
 gpgcheck=0
 enabled=0
