--- a/ansible/files/citool-container.sh.j2
+++ b/ansible/files/citool-container.sh.j2
@@ -40,13 +40,15 @@ export SENTRY_TAG_MAP="citool_image=${CITOOL_IMAGE},citool_image_id=${CITOOL_IMA
 # --rm is required to cleanup the container after it has been run
 # --privileged is required to run container based workloads
 #
+# Mount /CONFIG with overlay. See TFT-3927 for details.
+#
 # /CONFIG and /ARTIFACTS are the default mounts of the upstream citoool container
 exec podman run --init \
                 --rm \
                 --privileged \
                 --network=host \
                 --name ${REQUEST_ID:-no-request-$RANDOM} \
-                -v ${CITOOL_CONFIG_DIR}:/CONFIG:Z \
+                -v ${CITOOL_CONFIG_DIR}:/CONFIG:O \
                 -v ${CITOOL_RUN_DIR}:/var/ARTIFACTS:Z \
                 -v /root/.ssh:/root/.ssh:Z \
                 -e SENTRY_DSN={[ sentry_dsn ]} \
