worker-redhat: add missing conditions around `hostname_hostname`
As it turns out this poor file is also rendered during deployment,
what is by itself not needed, but it shows a real problem by luck:
the `GUEST` should be guarded with ifs or the code can fail during
real usage.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/ansible-extra-vars.yaml.j2
+++ b/terragrunt/environments/production/worker-redhat/citool-config/ansible-extra-vars.yaml.j2
@@ -22,4 +22,6 @@ GUEST:
 # We cannot set it to FQDN, because hostname can only be 64 chars max:
 # https://redhat-internal.slack.com/archives/C03BRN71JAF/p1685450197314049
 #
+{% if GUEST is defined and GUEST.artemis_id %}
 hostname_hostname: "{{ GUEST.artemis_id }}"
+{% endif %}
