--- a/ansible/files/citool-container.sh.j2
+++ b/ansible/files/citool-container.sh.j2
@@ -20,6 +20,12 @@ CITOOL_IMAGE="${CITOOL_IMAGE:-citool:latest}"
 CITOOL_CONFIG_DIR="${CITOOL_CONFIG_DIR:-/etc/citool.d}"
 CITOOL_RUN_DIR="${CITOOL_RUN_DIR:-$PWD}"
 
+# Mount docker config for registry authentication if available
+DOCKER_CONFIG_MOUNT=""
+if [ -f /root/.docker/config.json ]; then
+  DOCKER_CONFIG_MOUNT="-v /root/.docker/config.json:/root/.docker/config.json:ro,Z"
+fi
+
 echo "Known images:"
 podman images
 
@@ -59,4 +65,5 @@ exec podman run --init \
                 -e SENTRY_TAG_MAP=${SENTRY_TAG_MAP} \
                 -e ANSIBLE_COLLECTIONS_PATH={[ profiles_dir ]}:/root/.ansible/collections:/usr/share/ansible/collections \
                 ${CITOOL_EXTRA_PODMAN_ARGS} \
+                ${DOCKER_CONFIG_MOUNT} \
                 "$CITOOL_IMAGE" "$@"
