install-python: make it work for RHEL6
Seems old tar and curl cannot survive a few problems:

1. there is a missing `;` causing mkdir to not run properly and seems
   tar can already create dirs on newer releases, but on RHEL6 it fails

```
<root@10.31.15.39> ESTABLISH SSH CONNECTION FOR USER: None
<root@10.31.15.39> SSH: EXEC ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o 'IdentityFile="/var/home/thrix/.ssh/ci_id_rsa"' -o KbdInteractiveAuthentication=no -o PreferredAuthentications=gssapi-with-mic,gssapi-keyex,hostbased,publickey -o PasswordAuthentication=no -o ConnectTimeout=10 -oHostKeyAlgorithms=+ssh-rsa -oPubkeyAcceptedAlgorithms=+ssh-rsa -tt root@10.31.15.39 'bash -c "set -x
    mkdir -p /var/opt/standalone-python;
    curl '"'"'https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D'"'"'\
    | tar -C /var/opt/standalone-python -xzf -"'
<root@10.31.15.39> (2, b"+ curl 'https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D '\r\n+ tar -C /var/opt/standalone-python -xzf -\r\n  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n                                 Dload  Upload   Total   Spent    Left  Speed\r\n\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0tar: /var/opt/standalone-python: Cannot chdir: No such file or directory\r\ntar: Error is not recoverable: exiting now\r\n\r  0  127M    0 53439    0     0   127k      0  0:17:05 --:--:--  0:17:05  164k\r\ncurl: (23) Failed writing body (1178 != 1369)\r\n", b'Connection to 10.31.15.39 closed.\r\n')
<root@10.31.15.39> Failed to connect to the host via ssh: Connection to 10.31.15.39 closed.
FAILED - RETRYING: [root@10.31.15.39]: Fetch the custom Python runtime (5 retries left).
```

2. seems the definition of the binaries ends up as two strings, while
   the other one is empty and old curl still trie

--- a/terragrunt/environments/dev/worker-public/citool-config/ansible-extra-vars.yaml.j2
+++ b/terragrunt/environments/dev/worker-public/citool-config/ansible-extra-vars.yaml.j2
@@ -4,13 +4,9 @@ UPDATE_FROM_ARTIFACTS: {{ ((GUEST.environment.pipeline | default({})).settings |
 {% endif %}
 
 python_bin_url:
-  aarch64: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/\
-            dist/build-aarch64.tar.gz?job=build_cpython%3A%20%5Baarch64%5D"
-  ppc64le: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/\
-            dist/build-ppc64le.tar.gz?job=build_cpython%3A%20%5Bppc64le%5D"
-  s390x: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/\
-          dist/build-s390x.tar.gz?job=build_cpython%3A%20%5Bs390x%5D"
-  x86_64: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/\
-           dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D"
+  aarch64: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-aarch64.tar.gz?job=build_cpython%3A%20%5Baarch64%5D"
+  ppc64le: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-ppc64le.tar.gz?job=build_cpython%3A%20%5Bppc64le%5D"
+  s390x: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-s390x.tar.gz?job=build_cpython%3A%20%5Bs390x%5D"
+  x86_64: "https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D"
 
 python_install_path: "/var/opt/standalone-python"
